<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Live Caption</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="russian">Russian</string>
    <string name="japanese">Japanese</string>
    <string name="audio">Audio</string>
    <string name="subtitle">Subtitle</string>
    <string name="vietnamese">Vietnamese</string>

</resources>
