<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:textStyle="bold"
        android:text="@string/audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:text="@string/english"
            android:id="@+id/radio_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/radio_cn"
            android:text="@string/chinese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/radio_ru"
            android:text="@string/russian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/radio_ja"
            android:text="@string/japanese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <TextView
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:text="@string/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:text="@string/english"
            android:id="@+id/radio_en_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/radio_vi_2"
            android:text="@string/vietnamese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <Button
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button"
        android:layout_gravity="center"
        android:id="@+id/button"
        android:text="@string/start"
        android:layout_width="120dp"
        android:layout_height="120dp"/>

</LinearLayout>
